--- a/modules/markaspot_validation/markaspot_validation.services.yml
+++ b/modules/markaspot_validation/markaspot_validation.services.yml
@@ -1,5 +1,13 @@
 services:
   markaspot_validation.double_post_constraint_validator:
     class: Drupal\markaspot_validation\Plugin\Validation\Constraint\DoublePostConstraintValidator
-    arguments: ['@config.factory']
+    arguments: ['@datetime.time', '@request_stack', '@entity_type.manager', '@config.factory', '@current_user']
+
+  markaspot_validation.multiple_reports_constraint_validator:
+    class: Drupal\markaspot_validation\Plugin\Validation\Constraint\MultipleReportsConstraintValidator
+    arguments: ['@datetime.time', '@request_stack', '@entity_type.manager', '@config.factory', '@current_user']
+
+  markaspot_validation.default_location_constraint_validator:
+    class: Drupal\markaspot_validation\Plugin\Validation\Constraint\DefaultLocationConstraintValidator
+    arguments: ['@datetime.time', '@request_stack', '@entity_type.manager', '@config.factory', '@current_user']
 
