--- a/composer.json
+++ b/composer.json
@@ -120,8 +120,7 @@
         "Add taxonomy condition": "https://www.drupal.org/files/issues/2018-07-05/2983864-feature-request-compare-target_id-with-field.patch"
       },
       "drupal/core": {
-        "Add UI for field formatter translation": "https://www.drupal.org/files/issues/2020-12-04/2546212-168.patch",
-        "Add UI for field formatter translation / Action tab": "https://www.drupal.org/files/issues/2020-12-04/2546212-168-actions.patch"
+         "Translate field group": "https://www.drupal.org/files/issues/2022-09-19/2546212-193.patch"
       }
     }
   }
