--- a/modules/markaspot_feedback/markaspot_feedback.services.yml
+++ b/modules/markaspot_feedback/markaspot_feedback.services.yml
@@ -1,4 +1,8 @@
 services:
   markaspot_feedback.feedback:
     class: Drupal\markaspot_feedback\FeedbackService
-    arguments: ['@entity_type.manager', '@config.factory']
+    arguments: ['@entity_type.manager', '@config.factory',
+                '@logger.channel.markaspot_feedback', '@messenger']
+  logger.channel.markaspot_feedback:
+    parent: logger.channel_base
+    arguments: [ 'markaspot_feedback' ]
