Remove dependencies, moved route check for ui menues
# Conflicts:
#	modules/markaspot_ui/markaspot_ui.module

--- a/modules/markaspot_trend/markaspot_trend.info.yml
+++ b/modules/markaspot_trend/markaspot_trend.info.yml
@@ -4,3 +4,5 @@ description: Vue.js and Charts.js powered statistics
 core_version_requirement: ^8 || ^9
 package: Mark-a-Spot
 dependencies:
+  - markaspot_open311
+  - markaspot_map
