--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     "npm-asset/vue-router": "^3.0",
     "oomphinc/composer-installers-extender": "^2",
     "composer/installers": "^1.2",
-    "funiq/geophp": "dev-master",
+    "funiq/geophp": "^2",
     "anthonymartin/geo-location": "^1.0",
     "drupal/address": "~1.0",
     "drupal/features": "^3.0",
@@ -78,7 +78,7 @@
     "drupal/search_api": "^1.5",
     "drupal/views_infinite_scroll": "2",
     "drupal/default_content": "2.0.x",
-    "drupal/color_field": "^2.4",
+    "drupal/color_field": "^3",
     "drupal/field_permissions": "^1.1",
     "drupal/twig_tweak": "^2.0",
     "drupal/field_formatter_class":"^1.0",
