--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,17 @@
   "require": {
     "npm-asset/leaflet.locatecontrol": "^0.65",
     "npm-asset/fontawesome-iconpicker": "^1.3",
-    "npm-asset/waypoints": "4.0.1",
+    "npm-asset/waypoints": "^4",
     "npm-asset/iso8601-js-period": "^0.2",
-    "npm-asset/dateformat": "3.0.2",
-    "npm-asset/lazysizes": "^5.1",
+    "npm-asset/dateformat": "^5",
+    "npm-asset/lazysizes": "^5",
     "npm-asset/leaflet": "1.7",
     "npm-asset/leaflet.timeline": "^1.4",
-    "npm-asset/leaflet.heat": "0.2.0",
+    "npm-asset/leaflet.heat": "^0.2.0",
     "npm-asset/leaflet.markercluster": "^1.4",
     "npm-asset/leaflet-fullscreen": "^1",
     "npm-asset/leaflet-edgebuffer": "^1",
-    "npm-asset/leaflet-easybutton": "2.4.0",
+    "npm-asset/leaflet-easybutton": "^2.4",
     "npm-asset/leaflet-control-geocoder": "^1",
     "npm-asset/leaflet-geosearch": "^3.6",
     "npm-asset/mapbox--geojson-rewind": "^0.5.0",
@@ -42,7 +42,7 @@
     "npm-asset/mapbox-gl-leaflet": "^0.0.15",
     "npm-asset/mapbox-gl": "2.4.1",
     "npm-asset/font-awesome": "^5",
-    "npm-asset/axios": "^0.18.0",
+    "npm-asset/axios": "^1",
     "npm-asset/caman": "^4.1",
     "npm-asset/chart.js": "^2.7",
     "npm-asset/vue": "^2.5",
