Add different types of stream wrapper configs for media

--- a/modules/markaspot_open311/markaspot_open311.services.yml
+++ b/modules/markaspot_open311/markaspot_open311.services.yml
@@ -15,13 +15,13 @@ services:
 
   markaspot_open311.processor:
     class: Drupal\markaspot_open311\Service\GeoreportProcessorService
-    arguments: ['@config.factory', '@current_user', '@datetime.time', '@request_stack', '@entity_type.manager', '@file_url_generator', '@module_handler']
+    arguments: ['@config.factory', '@current_user', '@datetime.time', '@request_stack', '@entity_type.manager', '@file_url_generator', '@module_handler', '@entity_field.manager', '@stream_wrapper_manager', '@stream_wrapper_manager']
 
   markaspot_open311.georeport_event.subscriber:
     class: Drupal\markaspot_open311\EventSubscriber\GeoreportEventSubscriber
     arguments: [ '@serializer', '@path.current']
     tags:
-     - { name: event_subscriber }
+      - { name: event_subscriber }
 
   markaspot_open311.event_subscriber:
     class: Drupal\markaspot_open311\EventSubscriber\RemoveCookieSubscriber
