--- a/modules/markaspot_action_front/markaspot_action_front.info.yml
+++ b/modules/markaspot_action_front/markaspot_action_front.info.yml
@@ -1,6 +1,6 @@
 name: 'Mark-a-Spot Action Front'
 package: Mark-a-Spot
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 description: 'Provides the front menu block'
 type: module
 dependencies:
