--- a/modules/markaspot_action_stats/markaspot_action_stats.info.yml
+++ b/modules/markaspot_action_stats/markaspot_action_stats.info.yml
@@ -1,6 +1,6 @@
 name: 'Mark-a-Spot Action Stats'
 package: Mark-a-Spot
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 description: 'Provides the statistic menu block'
 type: module
 dependencies:
