--- a/modules/markaspot_archive/markaspot_archive.info.yml
+++ b/modules/markaspot_archive/markaspot_archive.info.yml
@@ -1,5 +1,5 @@
 name: 'Mark-a-Spot Archive'
 type: module
 description: 'Mark-a-Spot Archive'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Mark-a-Spot'
