--- a/modules/markaspot_feedback/markaspot_feedback.info.yml
+++ b/modules/markaspot_feedback/markaspot_feedback.info.yml
@@ -1,5 +1,5 @@
 name: 'Mark-a-Spot Feedback'
 type: module
 description: 'Mark-a-Spot Feedback'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Mark-a-Spot'
