--- a/modules/markaspot_privacy/markaspot_privacy.info.yml
+++ b/modules/markaspot_privacy/markaspot_privacy.info.yml
@@ -1,5 +1,5 @@
 name: 'Mark-a-Spot Privacy'
 type: module
 description: 'Privacy term checkbox field and term page'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Mark-a-Spot'
