--- a/modules/markaspot_resubmission/markaspot_resubmission.info.yml
+++ b/modules/markaspot_resubmission/markaspot_resubmission.info.yml
@@ -1,5 +1,5 @@
 name: 'Mark-a-Spot Resubmission'
 type: module
 description: 'Mark-a-Spot Resubmission'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Mark-a-Spot'
