--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
@@ -8,7 +8,8 @@ source:
   ids: [title]
 process:
   title: title
-  body: body
+  body__value: description__value
+  body__format: html
 destination:
   plugin: 'entity:node'
   default_bundle: page
