Fix import for default_content

--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_service_category.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_service_category.yml
@@ -16,9 +16,10 @@ process:
   weight: weight
   parent: parent
   uuid: uuid
-  field_category_hex_color: field_category_hex_color
-  field_category_hex_opacity: field_category_hex_opacity
+  field_category_gid: field_category_gid
+  field_category_hex: field_category_hex
   field_category_icon: field_category_icon
+  field_service_code: field_service_code
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: service_category
