Add legal and contact block for later use, switch to english

--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
@@ -9,7 +9,7 @@ source:
 process:
   title: title
   body__value: description__value
-  body__format: html
+  body__format: full_html
 destination:
   plugin: 'entity:node'
   default_bundle: page
