Fix block migration

--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_block.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_block.yml
@@ -7,15 +7,12 @@ source:
   header_row_count: 1
   ids: [uuid]
 process:
-  'info': info
-  'langcode': langcode
-  'uuid': uuid
-  'bundle': bundle
-  'revision_id': revision_id
-  'rev_id_current': rev_id_current
-  'body_value': 'body/value'
-  'body_summary': 'body/summary'
-  'body_format': 'body/format'
+  title: title
+  uuid: uuid
+  body/value: body
+  body/format:
+    plugin: default_value
+    default_value: full_html
 destination:
   plugin: 'entity:block_content'
   default_bundle: mas_custom
