Add maplibre-gl-js for map and map widget

--- a/modules/markaspot_map/markaspot_map.libraries.yml
+++ b/modules/markaspot_map/markaspot_map.libraries.yml
@@ -69,6 +69,14 @@ mapbox:
     component:
       /libraries/mapbox-gl/dist/mapbox-gl.css: {}
 
+maplibre:
+  js:
+    /libraries/maplibre-gl/dist/maplibre-gl.js: { }
+    /libraries/maplibre-gl-leaflet/leaflet-maplibre-gl.js: { }
+  css:
+    component:
+      /libraries/maplibre-gl/dist/maplibre-gl.css: {}
+
 
 # Markaspot Map core library.
 map:
