--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,33 @@
         }
     ],
     "repositories": [
+
+        {
+            "type": "package",
+            "package": {
+                "name": "maplibre/maplibre-gl-js",
+                "version": "3.6.2",
+                "type": "drupal-library",
+                "source": {
+                    "url": "https://github.com/maplibre/maplibre-gl-js.git",
+                    "type": "git",
+                    "reference": "v3.6.2"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "mapbox/mapbox-gl-js",
+                "version": "3.0.0",
+                "type": "drupal-library",
+                "source": {
+                    "url": "https://github.com/mapbox/mapbox-gl-js.git",
+                    "type": "git",
+                    "reference": "v3.0.0"
+                }
+            }
+        },
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
@@ -40,8 +67,6 @@
         "npm-asset/mapbox--geojson-rewind": "^0.5.0",
         "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
         "npm-asset/mapbox-gl-leaflet": "^0.0.15",
-        "npm-asset/mapbox-gl": "^2",
-        "npm-asset/maplibre-gl": "^2",
         "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
         "npm-asset/font-awesome": "^5",
         "npm-asset/axios": "^1",
@@ -50,6 +75,8 @@
         "npm-asset/vue": "^2.5",
         "npm-asset/vue-chartjs": "3.5.1",
         "npm-asset/vue-router": "^3.0",
+        "maplibre/maplibre-gl-js": "3.6.2",
+        "mapbox/mapbox-gl-js": "3.0.0",
         "oomphinc/composer-installers-extender": "^2",
         "composer/installers": "^1.2",
         "anthonymartin/geo-location": "^1.0",
@@ -118,27 +145,5 @@
                 "PHP 8.2 compatibility fixes": "https://www.drupal.org/files/issues/2023-02-08/3340222-php-8.2-deprecations.patch"
             }
         }
-    },
-    "replace": {
-        "npm-asset/mapbox--point-geometry": "*",
-        "npm-asset/mapbox--vector-tile": "*",
-        "npm-asset/mapbox--whoots-js": "*",
-        "npm-asset/mapbox--unitbezier": "*",
-        "npm-asset/mapbox--tiny-sdf": "*",
-        "npm-asset/mapbox--mapbox-gl-supported": "*",
-        "npm-asset/mapbox--jsonlint-lines-primitives": "*",
-        "npm-asset/mapbox--geojson-rewind": "*",
-        "npm-asset/mapbox--node-pre-gyp": "*",
-        "npm-asset/types--mapbox__point-geometry": "*",
-        "npm-asset/types--mapbox__vector-tile": "*",
-        "npm-asset/ini": "*",
-        "npm-asset/kind-of": "*",
-        "npm-asset/types--pbf": "*",
-        "npm-asset/isexe": "*",
-        "npm-asset/which": "*",
-        "npm-asset/global-prefix": "*",
-        "npm-asset/types--geojson": "*",
-        "npm-asset/potpack": "*",
-        "npm-asset/supercluster": "*"
     }
 }
