--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         {
             "type": "package",
             "package": {
-                "name": "maplibre/maplibre-gl-js",
-                "version": "3.6.2",
+                "name": "mapbox/mapbox-gl",
                 "type": "drupal-library",
+                "version": "3.0.0",
                 "dist": {
-                    "url": "https://github.com/maplibre/maplibre-gl-js/archive/refs/tags/v3.6.2.zip",
+                    "url": "https://github.com/markaspot/mark-a-spot/releases/download/10.6.0-beta.2/mapbox-gl.zip",
                     "type": "zip"
                 }
             }
@@ -27,11 +27,11 @@
         {
             "type": "package",
             "package": {
-                "name": "mapbox/mapbox-gl-js",
-                "version": "3.0.0",
+                "name": "maplibre/maplibre-gl",
                 "type": "drupal-library",
+                "version": "3.6.2",
                 "dist": {
-                    "url": "https://github.com/maplibre/maplibre-gl-js/archive/refs/tags/v3.6.2.zip",
+                    "url": "https://github.com/markaspot/mark-a-spot/releases/download/10.6.0-beta.2/maplibre-gl.zip",
                     "type": "zip"
                 }
             }
@@ -72,8 +72,8 @@
         "npm-asset/vue": "^2.5",
         "npm-asset/vue-chartjs": "3.5.1",
         "npm-asset/vue-router": "^3.0",
-        "maplibre/maplibre-gl-js": "3.6.2",
-        "mapbox/mapbox-gl-js": "3.0.0",
+        "maplibre/maplibre-gl": "3.6.2",
+        "mapbox/mapbox-gl": "3.0.0",
         "oomphinc/composer-installers-extender": "^2",
         "composer/installers": "^1.2",
         "anthonymartin/geo-location": "^1.0",
