--- a/themes/custom/mas_olivero/package.json
+++ b/themes/custom/mas_olivero/package.json
@@ -1,21 +1,85 @@
 {
+  "name": "Drupal",
+  "description": "Drupal is an open source content management platform powering millions of websites and applications.",
+  "license": "GPL-2.0",
+  "private": true,
+  "engines": {
+    "yarn": ">= 1.6",
+    "node": ">= 18.0"
+  },
   "scripts": {
-    "build": "yarn build:css & yarn build:js",
-    "watch": "yarn watch:css & yarn watch:js",
-    "build:css": "cross-env BABEL_ENV=legacy node ./scripts/css/postcss-build.js",
-    "watch:css": "cross-env BABEL_ENV=legacy node ./scripts/css/postcss-watch.js",
-    "build:js": "cross-env BABEL_ENV=legacy node ./scripts/js/babel-es6-build.js",
-    "build:js-dev": "cross-env NODE_ENV=development BABEL_ENV=legacy node ./scripts/js/babel-es6-build.js",
-    "watch:js": "cross-env BABEL_ENV=legacy node ./scripts/js/babel-es6-watch.js",
-    "watch:js-dev": "cross-env NODE_ENV=development BABEL_ENV=legacy node ./scripts/js/babel-es6-watch.js",
+    "build": "yarn build:css && yarn vendor-update",
+    "watch": "yarn watch:css ",
+    "build:css": "node ./scripts/css/postcss-build.js",
+    "watch:css": "node ./scripts/css/postcss-watch.js",
     "lint:core-js": "node ./node_modules/eslint/bin/eslint.js .",
     "lint:core-js-passing": "node ./node_modules/eslint/bin/eslint.js --quiet --config=.eslintrc.passing.json .",
     "lint:core-js-stats": "node ./node_modules/eslint/bin/eslint.js --format=./scripts/js/eslint-stats-by-type.js .",
-    "lint:css": "stylelint \"**/*.pcss.css\"",
-    "lint:css-fix": "stylelint \"**/*.pcss.css\" --fix",
-    "lint:css-checkstyle": "stylelint \"**/*.pcss.css\" --custom-formatter ./node_modules/stylelint-checkstyle-formatter/index.js",
-    "test:nightwatch": "cross-env BABEL_ENV=development node -r dotenv-safe/config -r @babel/register ./node_modules/.bin/nightwatch --config ./tests/Drupal/Nightwatch/nightwatch.conf.js",
-    "prettier": "prettier --write \"./**/*.es6.js\" \"./tests/Drupal/Nightwatch/**/*.js\""
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css-checkstyle": "stylelint \"**/*.css\" --custom-formatter ./node_modules/stylelint-checkstyle-formatter/index.js",
+    "lint:yaml": "node ./node_modules/eslint/bin/eslint.js --ext .yml .",
+    "test:nightwatch": "node -r dotenv-safe/config ./node_modules/.bin/nightwatch --config ./tests/Drupal/Nightwatch/nightwatch.conf.js",
+    "prettier": "prettier --write \"./**/*.js\"",
+    "spellcheck": "cspell -c .cspell.json",
+    "spellcheck:make-drupal-dict": "rm -f misc/cspell/dictionary.txt && touch misc/cspell/dictionary.txt && yarn -s spellcheck:core --unique --words-only | perl -Mopen=locale -pe '$_=lc$_' | LC_ALL=en_US.UTF-8 tr -d \\\\\\\\ | LC_ALL=C sort -u -o misc/cspell/dictionary.txt",
+    "spellcheck:core": "cspell -c .cspell.json --root .. \"core/**/*\" \"composer/**/*\" \"composer.json\" \".gitlab-ci/*\" \".gitlab-ci.yml\"",
+    "vendor-update": "node ./scripts/js/vendor-update.js",
+    "watch:ckeditor5": "webpack --config ./modules/ckeditor5/webpack.config.js --watch",
+    "build:ckeditor5": "webpack --config ./modules/ckeditor5/webpack.config.js",
+    "check:ckeditor5": "node ./scripts/js/ckeditor5-check-plugins.js",
+    "build:ckeditor5-types": "node ./scripts/js/ckeditor5-types-documentation.js",
+    "build:ckeditor5-dev": "yarn build:ckeditor5 --mode=development",
+    "watch:ckeditor5-dev": "yarn watch:ckeditor5 --mode=development"
+  },
+  "devDependencies": {
+
+    "@drupal/once": "1.0.x",
+    "backbone": "1.4.x",
+    "chokidar": "^3.3.1",
+    "ckeditor5": "~39.0.1",
+    "cspell": "^6.31.1",
+    "dotenv-safe": "^8.2.0",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jquery": "^1.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-yml": "^1.8.0",
+    "glob": "^8.0.3",
+    "jquery": "~3.7.0",
+    "jquery-form": "4.3.x",
+    "jquery-ui": "1.13.x",
+    "js-cookie": "^3.0.5",
+    "jsdom": "^22.1.0",
+    "loadjs": "4.2.x",
+    "minimist": "^1.2.8",
+    "mkdirp": "^3.0.1",
+    "nightwatch": "^2.3.9",
+    "normalize.css": "8.0.x",
+    "postcss": "^8.4.31",
+    "postcss-header": "^3.0.2",
+    "postcss-import": "^15.0.0",
+    "postcss-preset-env": "^8.4.2",
+    "postcss-pxtorem": "^6.0.0",
+    "postcss-url": "^10.1.3",
+    "prettier": "^2.1.2",
+    "shepherd.js": "~10.0.1",
+    "sortablejs": "1.15.x",
+    "stylelint": "^15.10.1",
+    "stylelint-checkstyle-formatter": "^0.1.2",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-order": "^6.0.3",
+    "tabbable": "^6.1.2",
+    "terser": "^5.19.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "underscore": "~1.13.4",
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
+  },
+  "resolutions": {
+    "nightwatch/semver": "~7.5.2",
+    "get-func-name": "^2.0.2"
   },
   "browserslist": [
     "last 2 Chrome major versions",
@@ -24,79 +88,8 @@
     "last 2 Edge major versions",
     "last 2 Opera versions",
     "last 2 iOS major versions",
-    "last 1 Explorer major version",
     "last 1 ChromeAndroid version",
-    "last 1 UCAndroid version",
     "last 1 Samsung version",
-    "last 1 OperaMini version",
     "Firefox ESR"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.7.7",
-    "babel-plugin-add-header-comment": "^1.0.3",
-    "chalk": "^3.0.0",
-    "chokidar": "^3.3.1",
-    "chromedriver": "^79.0.0",
-    "cross-env": "^6.0.3",
-    "dotenv-safe": "^8.2.0",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "glob": "^7.1.2",
-    "minimist": "^1.2.2",
-    "mkdirp": "^0.5.1",
-    "nightwatch": "^1.2.1",
-    "postcss": "^7.0.18",
-    "postcss-calc": "^7.0.1",
-    "postcss-custom-properties": "^9.0.2",
-    "postcss-header": "^2.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-pxtorem": "^5.1.1",
-    "postcss-rtl": "^1.5",
-    "prettier": "^1.14.0",
-    "stylelint": "^13.0.0",
-    "stylelint-checkstyle-formatter": "^0.1.1",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-no-browser-hacks": "^1.2.1",
-    "stylelint-order": "^4.0.0",
-    "stylelint-use-logical": "^1.1.0",
-    "terser": "^4.4.3"
-  },
-  "//": "'development is the default environment, and legacy is for transpiling the old jQuery codebase",
-  "babel": {
-    "env": {
-      "development": {
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "modules": "commonjs",
-              "targets": {
-                "node": "current"
-              }
-            }
-          ]
-        ]
-      },
-      "legacy": {
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "modules": false
-            }
-          ]
-        ]
-      }
-    }
-  },
-  "dependencies": {}
+  ]
 }
