--- a/modules/geolocation_mapbox/geolocation_mapbox.libraries.yml
+++ b/modules/geolocation_mapbox/geolocation_mapbox.libraries.yml
@@ -7,7 +7,8 @@ geolocation-mapbox-widget:
   css:
     theme:
       geolocation_mapbox.css: {}
-
+  dependencies:
+    - geolocation_mapbox/mapbox
 leaflet:
   header: true
   js:
@@ -18,7 +19,7 @@ leaflet:
 
 mapbox:
   js:
-    /libraries/mapbox-gl/dist/mapbox-gl.js: {}
+    /libraries/mapbox-gl/dist/mapbox-gl.js: {preprocess: false}
     /libraries/mapbox-gl-leaflet/leaflet-mapbox-gl.js: {}
   css:
     component:
@@ -36,9 +37,7 @@ leaflet-geosearch:
       /libraries/leaflet-geosearch/dist/geosearch.css: {}
   js:
     /libraries/leaflet-geosearch/dist/bundle.min.js: {}
-  dependencies:
-    - geolocation_mapbox/geolocation-mapbox-widget
-    - geolocation_mapbox/leaflet
+
 
 leaflet-locatecontrol:
   js:
