--- a/modules/markaspot_shstweak/markaspot_shstweak.info.yml
+++ b/modules/markaspot_shstweak/markaspot_shstweak.info.yml
@@ -2,7 +2,7 @@ name: Mark-a-Spot SHS tweaks
 type: module
 description: Provides tweaks for SHS module
 core: 8.x
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 dependencies:
   - shs:shs
 
