--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     ],
     "require": {
         "npm-asset/leaflet.locatecontrol": "^0.65",
-        "npm-asset/fontawesome-iconpicker": "^1.3",
+        "npm-asset/fontawesome-iconpicker": "^3",
         "npm-asset/waypoints": "^4",
         "npm-asset/iso8601-js-period": "^0.2",
         "npm-asset/dateformat": "^5",
@@ -77,14 +77,13 @@
         "oomphinc/composer-installers-extender": "^2",
         "composer/installers": "^2",
         "anthonymartin/geo-location": "^1.0",
-        "drupal/address": "~1.0",
+        "drupal/address": "~2",
         "drupal/pathauto": "^1",
         "drupal/restui": "^1",
         "drupal/token": "^1.9",
-        "drupal/ctools": "3.x-dev",
-        "drupal/image_effects": "^3.5",
-        "drupal/layout_library": "^1.0@beta",
-        "drupal/lazy": "^3.0",
+        "drupal/ctools": "^4",
+        "drupal/image_effects": "^4",
+        "drupal/lazy": "^4.0",
         "drupal/paragraphs": "^1.2",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/diff": "^1.0",
@@ -92,15 +91,15 @@
         "drupal/field_group": "^3.1",
         "drupal/geolocation": "^3",
         "drupal/media_parent_entity_link": "^1.0",
-        "drupal/metatag": "^1.16",
+        "drupal/metatag": "^2",
         "drupal/services_api_key_auth": "dev-3.0.x",
         "drupal/search_api": "^1.5",
         "drupal/views_infinite_scroll": "^2",
         "drupal/color_field": "^3",
         "drupal/field_permissions": "^1.1",
         "drupal/field_formatter_class":"^1.0",
-        "drupal/inline_entity_form": "^1.0@RC",
-        "drupal/shs": "2.0.0-rc4"
+        "drupal/inline_entity_form": "^3",
+        "drupal/shs": "^2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -135,9 +134,6 @@
         "patches": {
             "drupal/core": {
                 "Translate field group": "https://www.drupal.org/files/issues/2022-09-19/2546212-193.patch"
-            },
-            "drupal/lazy": {
-                "PHP 8.2 compatibility fixes": "https://www.drupal.org/files/issues/2023-02-08/3340222-php-8.2-deprecations.patch"
             }
         }
     }
