--- a/modules/fa_icon_class/fa_icon_class.info.yml
+++ b/modules/fa_icon_class/fa_icon_class.info.yml
@@ -2,6 +2,6 @@ name: FontAwesome Icon Class
 type: module
 description: Adds a fontawesome icon class formatter and widget.
 package: Field types
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 dependencies:
   - node
