--- a/modules/geolocation_mapbox/geolocation_mapbox.info.yml
+++ b/modules/geolocation_mapbox/geolocation_mapbox.info.yml
@@ -1,7 +1,7 @@
 name: Geolocation Mapbox
 type: module
 description: A Mapbox based geocoder and widget for geolocation.
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 package: Custom
 dependencies:
   - geolocation
