--- a/modules/geolocation_nominatim/geolocation_nominatim.info.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.info.yml
@@ -1,7 +1,7 @@
 name: Geolocation Nominatim
 type: module
 description: A Nominatim based geocoder and widget for geolocation.
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 package: Custom
 dependencies:
   - geolocation
