--- a/modules/markaspot_front/markaspot_front.info.yml
+++ b/modules/markaspot_front/markaspot_front.info.yml
@@ -1,6 +1,6 @@
 name: 'Mark-a-Spot Front'
 package: Mark-a-Spot
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 description: 'Installs the 8.4.x Front page'
 type: module
 dependencies:
