--- a/modules/markaspot_static_json/markaspot_static_json.info.yml
+++ b/modules/markaspot_static_json/markaspot_static_json.info.yml
@@ -1,5 +1,5 @@
 name: Mark-a-Spot Static JSON
 type: module
 description: Generate static json for map view's heatmap and timecontroller
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 package: Mark-a-Spot
