--- a/modules/markaspot_trend/markaspot_trend.info.yml
+++ b/modules/markaspot_trend/markaspot_trend.info.yml
@@ -1,7 +1,7 @@
 name: Mark-a-Spot Trend
 type: module
 description: Vue.js and Charts.js powered statistics
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10 || ^11
 package: Mark-a-Spot
 dependencies:
   - markaspot_open311
