Fix library use (maplibre) and address field auto-fill

--- a/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
+++ b/modules/geolocation_nominatim/geolocation_nominatim.libraries.yml
@@ -31,6 +31,8 @@ maplibre:
   css:
     component:
       /libraries/maplibre-gl/dist/maplibre-gl.css: {}
+  dependencies:
+    - geolocation_nominatim/leaflet
 
 font-awesome:
   css:
