Update core requirement in markaspot_language.info.yml

--- a/modules/markaspot_language/markaspot_language.info.yml
+++ b/modules/markaspot_language/markaspot_language.info.yml
@@ -2,4 +2,4 @@ name: markaspot_language
 type: module
 description: translate content entities
 package: Mark-a-Spot
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
