--- a/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
@@ -1,19 +1,19 @@
 markaspot_nuxt.form_mode_settings:
-  path: '/jsonapi/mark-a-spot-form-mode-settings/{entity_type}/{bundle}/{form_mode}'
+  path: '/api/mark-a-spot-form-mode-settings/{entity_type}/{bundle}/{form_mode}'
   defaults:
     _controller: '\Drupal\markaspot_nuxt\Controller\MarkASpotSettingsController::getFormModeSettings'
     _title: 'Form Mode Settings'
   requirements:
     _permission: 'access content'
 markaspot_nuxt.markaspot_settings:
-  path: '/jsonapi/mark-a-spot-settings'
+  path: '/api/mark-a-spot-settings'
   defaults:
     _controller: '\Drupal\markaspot_nuxt\Controller\MarkASpotSettingsController::getMarkASpotSettings'
     _title: 'Mark-a-Spot Settings'
   requirements:
     _permission: 'access content'
 markaspot_nuxt.vote_sum:
-  path: '/jsonapi/vote-sum/{uuid}'
+  path: '/api/vote-sum/{uuid}'
   defaults:
     _controller: '\Drupal\markaspot_nuxt\Controller\VotingApiController::voteSum'
     _format: 'json'
