Fix key for clean imports

--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
@@ -8,7 +8,7 @@ source:
   ids: [title]
 process:
   title: title
-  body__value: description__value
+  body__value: body
   body__format: full_html
 destination:
   plugin: 'entity:node'
